NetBSD Problem Report #47195

From www@NetBSD.org  Thu Nov 15 11:07:34 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id CFBCD63E771
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 15 Nov 2012 11:07:33 +0000 (UTC)
Message-Id: <20121115110732.5BBE963E771@www.NetBSD.org>
Date: Thu, 15 Nov 2012 11:07:32 +0000 (UTC)
From: dnied@tiscali.it
Reply-To: dnied@tiscali.it
To: gnats-bugs@NetBSD.org
Subject: NetBSD 6.0 (i386) install from/to USB fails
X-Send-Pr-Version: www-1.0

>Number:         47195
>Category:       install
>Synopsis:       NetBSD 6.0 (i386) install from/to USB fails
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    install-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Nov 15 11:10:00 +0000 2012
>Closed-Date:    Sat Jan 12 06:53:25 +0000 2013
>Last-Modified:  Sat Jan 12 06:53:25 +0000 2013
>Originator:     Dario Niedermann
>Release:        6.0
>Organization:
>Environment:
Linux localhost 2.6.24.5-smp #1 SMP Wed Apr 30 13:18:13 CDT 2008 i686 AMD Turion(tm) 64 Mobile Technology MK-36 AuthenticAMD GNU/Linux

>Description:
I've been trying to install NetBSD from a USB stick to the same USB
stick containing the installer. This looked feasible, since sysinstall
at some early step says "if you booted from USB you can remove media
now", but this doesn't seem to be true.

In fact, if media is removed when sysinstall advises to (and then
reinserted, because I want to install onto that same stick) the blue
screen is immediately replaced by a green-on-black console. When the
screen is refreshed with ^L, the installer freezes.

If media is not removed, minimal installation to sd0 proceeds and
seems to be OK: partitioning (correct size is reported), binary set
download and install via FTP, everything looks all right... until
reboot, where I find out that the USB stick wasn't partitioned as
instructed and it's not bootable (for lack of /boot, a message says).

I'm posting this to the bugs ML because:

1) sysinstall says boot media can be removed, but doing so freezes
   the installer;

2) in case boot media is not removed, sysinstall gives the false
   impression that everything is going well, but the result is an
   unbootable USB stick

3) the procedure resulted in a waste of time, bandwith (retrying &
   redownloading sets) and a frustrating user experience.

Hoping this is useful for improving the installer and/or the
documentation.

Best regards,
DN

>How-To-Repeat:
The image used is 'NetBSD-6.0-i386-install.img', and it was written
to the USB stick with 'cat NetBSD-6.0-i386-install.img >/dev/sda'
on a Linux system. This produced a bootable USB stick.

>Fix:

>Release-Note:

>Audit-Trail:
From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: install/47195: NetBSD 6.0 (i386) install from/to USB fails
Date: Thu, 15 Nov 2012 12:18:53 +0100

 The (bogus) message has already been removed in -current and a pullup (#648)
 is pending for the -6 branch to fix this as well.

 You can not remove the USB media with the installer technology used right
 now (it would be possible to create a memory disk based image that allows
 this, but that on the other hand does not easily allow adding additional
 stuff).

 Martin

From: "Izumi Tsutsui" <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47195 CVS commit: src/distrib/utils/sysinst
Date: Sat, 17 Nov 2012 20:34:24 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Sat Nov 17 20:34:24 UTC 2012

 Modified Files:
 	src/distrib/utils/sysinst: disks.c

 Log Message:
 Don't show a disk which is mounted as root partition
 in the "Available disks" list during sysinst procedure
 to prevent users from shooting their foot in case of
 installation using install-image on a USB stick.
 Per suggestion in PR/47195.


 To generate a diff of this commit:
 cvs rdiff -u -r1.126 -r1.127 src/distrib/utils/sysinst/disks.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Julian Coleman" <jdc@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47195 CVS commit: [netbsd-6] src/distrib/utils/sysinst
Date: Sat, 24 Nov 2012 19:32:29 +0000

 Module Name:	src
 Committed By:	jdc
 Date:		Sat Nov 24 19:32:28 UTC 2012

 Modified Files:
 	src/distrib/utils/sysinst [netbsd-6]: disks.c

 Log Message:
 Pull up revision 1.127 (requested by tsutsui in ticket #706).

 Don't show a disk which is mounted as root partition
 in the "Available disks" list during sysinst procedure
 to prevent users from shooting their foot in case of
 installation using install-image on a USB stick.
 Per suggestion in PR/47195.


 To generate a diff of this commit:
 cvs rdiff -u -r1.123.2.2 -r1.123.2.3 src/distrib/utils/sysinst/disks.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Julian Coleman" <jdc@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47195 CVS commit: [netbsd-6-0] src/distrib/utils/sysinst
Date: Sun, 25 Nov 2012 10:12:14 +0000

 Module Name:	src
 Committed By:	jdc
 Date:		Sun Nov 25 10:12:14 UTC 2012

 Modified Files:
 	src/distrib/utils/sysinst [netbsd-6-0]: disks.c

 Log Message:
 Pull up revision 1.127 (requested by tsutsui in ticket #706).

 Don't show a disk which is mounted as root partition
 in the "Available disks" list during sysinst procedure
 to prevent users from shooting their foot in case of
 installation using install-image on a USB stick.
 Per suggestion in PR/47195.


 To generate a diff of this commit:
 cvs rdiff -u -r1.123.2.2 -r1.123.2.2.4.1 src/distrib/utils/sysinst/disks.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 12 Jan 2013 06:53:25 +0000
State-Changed-Why:
The fixes have been pulled up.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.