Don't show a disk which is mounted as root partition in the "Available disks" list during sysinst procedure to prevent users from shooting their foot in case of installation using install-image on a USB stick. Per suggestion in PR/47195.